force-app/main/default/objects/Home_Carousel__c/Home_Carousel__c.object-meta.xml
<CustomObject>
    <description>Used in Customer Portal and Mobile App 
To manage Home Page Events, Promotions etc.</description>
    <label>Home Carousel</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Carousel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>