force-app/main/default/objects/Home_Carousel__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <formula>IF(ISBLANK(Content_Version__c) , &apos;No File Associated&apos;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot; +Content_Version__c , &apos;&apos;,80,80))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content</label>
    <type>Text</type>
</CustomField>