force-app/main/default/objects/Home_Carousel__c/fields/Content_Version__c.field-meta.xml
<CustomField>
    <fullName>Content_Version__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Content Version</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>