force-app/main/default/objects/Home_Carousel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Home Carousel</relationshipLabel>
    <relationshipName>Home_Carousel</relationshipName>
    <type>Lookup</type>
</CustomField>