force-app/main/default/objects/Home_Carousel__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>Used to generate and publish related Image Public Link
This is used to publish the image in Portal and Mobile App</description>
    <inlineHelpText>Managed by Upload Image button</inlineHelpText>
    <label>Image URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>