force-app/main/default/objects/Home_Carousel__c/fields/Unique_SR_NO__c.field-meta.xml
<CustomField>
    <fullName>Unique_SR_NO__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique SR NO</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>