force-app/main/default/objects/Home_Carousel__c/fields/Web_URL__c.field-meta.xml
<CustomField>
    <fullName>Web_URL__c</fullName>
    <label>Web URL</label>
    <type>Url</type>
</CustomField>