force-app/main/default/objects/Home_Carousel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sr_No__c</columns>
    <columns>Country__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>